--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+nav {
+  width: 200px;
+}
+
 input {
   cursor: pointer;
 }
@@ -42,23 +49,22 @@ input {
   }
   /* hiding header elements */
   .hidden {
-    visibility: hidden;
+    display: none;
   }
 
   /* moving product container  */
   .add-product-container {
-    margin-left: 50%;
+    margin-left: 70%;
   }
-}
-@media (max-width: 300px) {
-  .add-product-container {
-    margin-left: -50%;
+  .footer {
+    margin-left: -100px;
   }
 }
 
 footer ul li {
   padding: 5px;
 }
+
 .page-1 {
   background-color: darkgreen;
   color: white;
